[package]
name = "web2md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
url = "2.4"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.17"
regex = "1.8"
html2md = "0.2"
